deploy/admin.yml
apiVersion: v1
kind: Service
metadata:
  name: admin
  labels:
    app: admin
    service: admin
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: admin
